experimental/internal/lexer/testdata/braces/unopened.proto.stderr.txt
error: encountered unmatched `)` delimiter
  --> testdata/braces/unopened.proto:5:1
   |
 5 | )
   | ^ expected a closing `(`

encountered 1 error
